# c_blake

./: .gitignore  CMakeLists.txt  main.go  sha-256.go
src/: library.c  library.go  library.h
test/: test_library.cpp
